mdadm (3.3.2-2) UNRELEASED; urgency=medium

  * remove more leftovers from old versions
  * do not embed $VERSION to mkconf and bugscript
  * removed unneeded lintian-overrides file

 -- Michael Tokarev <mjt@tls.msk.ru>  Sat, 04 Oct 2014 15:43:57 +0400

mdadm (3.3.2-1) unstable; urgency=low

  * new minor/bugfix upstream release (Closes: #731884, #763080)
  * removed remove-bashism-from-makefile.patch (applied upstream)
  * copy 64-md-raid-assembly.rules to initramfs too, this should
    bring us array auto-assemble during initramfs run (Closes: #678691)
  * denote inability to initialize md subsystem in local-top script
    from fatal error to warning (Closes: #733574)
  * create /etc/modprobe.d/mdadm.conf to set start_ro=1 there
    instead of doing it in the initramfs
  * use install -D in d/rules consistently and remove dirs from d/mdadm.dirs
  * remove references to old (2.x and 1.x) mdadm versions (Closes: #728804)
  * remove references to very old (pre-wheeze) breaks/replaces/depends
  * remove support of makedev
  * reformat mdadm-raid initscript a bit
  * remove rebuilding-raid.html (had invisible refs) and
    RAID5_versus_RAID10.txt docs.  Maybe it's a good idea to remove
    other docs shipped with the package, since these becoming stale
    and these days, better alternatives exist online
  * removed debian-specific mdadm-startall script which does nothing more than
    "mdadm --assemble --scan".  Remove docbook-to-man from build-deps.
  * pass dpkg-buildflags to upstream build system and
    stop using our own -O0, -Os etc
  * remove separate CFLAGS for udeb and simplify *FLAGS handling
  * bump Standards-Version to 3.9.5 (no changes needed)
  * fix VCS links to point to anonscm.d.o

 -- Michael Tokarev <mjt@tls.msk.ru>  Wed, 01 Oct 2014 15:09:07 +0400

mdadm (3.3-2) unstable; urgency=low

  * use 63-md-raid-arrays.rules instead of old 64-md-raid.rules
    (Closes: #726237)
  * do not use builtin blkid in udev rules, as our udev (at least