@@ -1,2 +1,0 @@
-mdadm.conf-example
-misc/syslog-events
